@@ -21,18 +21,6 @@
 #define _XOPEN_SOURCE
 #endif /* ndef _XOPEN_SOURCE */
 
-#ifndef L_SET
-#define L_SET SEEK_SET
-#endif /* ndef L_SET */
-
-#ifndef L_INCR
-#define L_INCR SEEK_CUR
-#endif /* ndef L_INCR */
-
-#ifndef L_XTND
-#define L_XTND SEEK_END
-#endif /* ndef L_XTND */
-
 
 /*
  * Implementation Includes
